--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇮🇹 意大利-1.12MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
   - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-3.02MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-2.28MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.52MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-1.66MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
