--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.28MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.56MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.52MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.12MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-1.13MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.31MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-802.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-352.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-3.81MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
+  - {name: 🇬🇧 英国-3.56MB/s(Youtube:不良林), server: uk-manchester.eiw2eemo.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: uk-manchester.eiw2eemo.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
