--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.12MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇩🇪 德国-1.13MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.94MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-590.3KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-300.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇫🇷 法国-1.31MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇫🇷 法国-802.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-352.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-590.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-802.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-352.6KB/s(Youtube:不良林)
